# taribot

./: .env-dist  .gitignore  Dockerfile  Dockerfile-alpine  LICENSE  README.md  config-dist.py  config-example.json  docker-compose.prod.yml  docker-compose.yml  event.py  exceptions.py  main.py  module.py  pyproject.toml  requirements.txt  server.py  yoyo.ini
apis/: gfycat.py
database/: __init__.py  connection.py  database.py  query_cursor.py
migrations/: 20181202_01_CjWUi-schedule-module.py
modules/: __init__.py  image.py  kitty.py  scheduler.py
modules/abc/: __init__.py  command.py
taribot/: config.py  module.py  server.py
taribot/apis/: __init__.py  gfycat.py
taribot/database/: database.py
taribot/modules/: __init__.py  image.py  kitty.py  scheduler.py
taribot/modules/abc/: command.py
tests/database/: test_database.py
