[tool.poetry]
name = "taribot"
version = "0.1.0"
description = ""
authors = ["Tarinu <kaarel06@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
APScheduler = "^3.5"
aiosqlite = "^0.12"
yoyo-migrations = "^7.0.0"
"discord.py" = "^1.3.1"
Pillow = "~=7.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
